# openpls-engine

./: .gitignore  .zenodo.json  ATTRIBUTION.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  RELEASING.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  draft-paper.yml  release.yml
docs/: RELEASING.md
openpls/: __init__.py  bootstrap.py  bootstrap_mga.py  config.py  copula.py  cta.py  estimator.py  f_squared.py  fit.py  fornell_larcker.py  higher_order.py  htmt.py  htmt2.py  inner_model.py  inner_summary.py  ipma.py  long_bootstrap.py  mga.py  micom.py  mode.py  moderation.py  outer_model.py  plsc.py  plspm.py  predict.py  q_squared.py  reliability.py  report.py  scale.py  scheme.py  specific_indirect.py  unidimensionality.py  util.py  vif.py  weights.py
paper/: paper.bib  paper.md
plspm/: __init__.py  bootstrap.py  config.py  estimator.py  fimix.py  fit.py  htmt.py  inner_model.py  inner_summary.py  ipma.py  long_bootstrap.py  mga.py  mode.py  moderation.py  outer_model.py  plspm.py  predict.py  q_squared.py  scale.py  scheme.py  unidimensionality.py  util.py  weights.py
tests/: test_bootstrap_mga.py  test_config.py  test_copula.py  test_coverage_gaps.py  test_cta.py  test_estimator.py  test_f_squared.py  test_fimix.py  test_fit.py  test_fornell_larcker.py  test_higher_order.py  test_htmt.py  test_htmt2.py  test_inner_summary_metrics.py  test_ipma.py  test_long_bootstrap.py  test_lv_mv_name_collision.py  test_mga.py  test_micom.py  test_missing_strategy.py  test_moderation.py  test_path_recovery_synthetic.py  test_plsc.py  test_predict.py  test_q_squared.py  test_redundancy_analysis_mode_b.py  test_regression_bootstrap.py  test_regression_metric.py  test_regression_nonmetric.py  test_regression_seminr.py  test_reliability_fallback.py  test_reliability_rename.py  test_report.py  test_scheme_equivalence_two_lv.py  test_scheme_newton.py  test_scheme_pca.py  test_sign_convention.py  test_specific_indirect.py  test_unidimensionality_fallback.py  test_util.py  (+1 more)
tests/data/: corporate_reputation.csv  mga_corp_reputation__path_coefficients__bootstrap_mga.csv  mga_corp_reputation__path_coefficients__bootstrap_results.csv
